# AiGov-mvp

./: .gitignore  CHATGPT_WRITE_TEST.md  README.md  README_TARGETS.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
aigov_ep/: __init__.py  cli.py
aigov_ep/artifacts/: manifests.py
aigov_ep/bundle/: compiler.py
aigov_ep/contracts/: __init__.py
aigov_ep/contracts/evidence_pack/: __init__.py  paths.py
aigov_ep/execute/: runner.py
aigov_ep/intake/: validate.py
aigov_ep/judge/: __init__.py  judge.py  mapper.py
aigov_ep/reporting/: generate.py
aigov_ep/targets/: __init__.py
aigov_ep/taxonomy/: __init__.py
aigov_ep/taxonomy/contracts/: signals.json
aigov_ep/utils/: io.py  scoring.py
docs/: eval-status.md
docs/handbook/claude-resources/: settings.json
docs/reports/: 2025-12-19_targetlab-rag_openrouter-llm-backend_v0.1.md  _index.md
runs/: ai_write_access_test.txt
services/targetlab_rag/: .env.example  Dockerfile  README.md  app.py
services/targetlab_rag/scripts/: generate_llm_artifacts.py
services/targetlab_rag/tests/: test_app.py
services/targetlab_rag/validation_artifacts/: chat_deterministic_override.json  chat_strict_llm.json
targets/compose/: docker-compose.yml
targets/compose/rag_api/: app.py
tools/: sync_taxonomy_from_specs.py
